--- a/countdown.css
+++ b/countdown.css
@@ -5,24 +5,21 @@
     box-sizing: border-box;
     color: #fff;
 }
-
-body {
-    background-image: linear-gradient(#bdc3c7, rgba(0, 0, 0, .3)), url("HD-wallpaper-goddess-durga-2009-durga-puja-kolkata.jpg");
-    background-position: center center;
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
+.main-container{
+    background-color: aliceblue;
+    min-height: 100vh;
+    max-width: 100vw;
     display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
     text-align: center;
     overflow: hidden;
-    font-family: 'Poppins', sans-serif;
 }
 .container {
-    background-image: linear-gradient(#bdc3c7, rgba(0, 0, 0, .3)), url("HD-wallpaper-goddess-durga-2009-durga-puja-kolkata.jpg");
-    background-position: center center;
+    background-image: linear-gradient(#d9e0e5, rgba(0, 0, 0, .1)), url("new.jpeg");
+    background-position: center;
+    min-width: 100vw;
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
@@ -37,6 +34,8 @@ body {
 .container1 {
     background-image: linear-gradient(#bdc3c7, rgba(0, 0, 0, .05)), url("kali\ ma.jpg");
     background-position: center center;
+    min-width: 100vw;
+
     height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
@@ -48,7 +47,6 @@ body {
     overflow: hidden;
     font-family: 'Poppins', sans-serif;
 }
-
 h1 {
     font-weight: normal;
     font-size: 60px;
@@ -87,7 +85,7 @@ span {
     font-weight: 900;
 }
 
-@media (max-width:550px) {
+@media (max-width:710px) {
     h1 {
         font-size: 35px;
     }
@@ -102,9 +100,9 @@ span {
     span {
         font-size: 10px;
     }
-    body {
+    .main-container {
         background-image: linear-gradient(#bdc3c7, rgba(0, 0, 0, .3)), url("back.jpg");
-        background-position: center center;
+
         height: 100vh;
         max-width: 1130px;
         background-size: cover;
